# phase-field-schema

./: .gitignore  CITATION.cff  LICENSE  README.md  evolving-work-plan.md  ideas.md  proposal.md
meeting-minutes/: meet-000_2023-05-23.md  meet-001_2023-08-16.md  meet-002_2023-09-21.md  meet-003_2023-10-20.md  meet-004_2023-11-17.md  meet-005_2023-12-15.md  meet-006_2024-01-17.md  meet-008_2024-03-27.md  meet-009_2024-05-29.md  meet-010_2024-06-26.md  meet-011_2024-07-31.md  meet-011_2024_07_31.md  meet-012_2024-08-28.md  meet-013_2024-09-25.md  meet-014_2024-10-30.md  meet-015_2024-11-27.md  meet-016_2025-01-29.md  meet-017_2025-02-26.md  meet-018_2025-04-02.md  meet-019_2025-06-25.md  meet-020_2025-07-30.md  meet_007_2024-02-15.md
ro-crate-examples/: README.md  flake.nix  pyproject.toml
ro-crate-examples/cli/: cli.py
ro-crate-examples/fipy/: README.md  benchmark8a.py  config.yaml  flake.nix  generate_rocrate.py  params8a.yaml  pyproject.toml
ro-crate-examples/fipy/data/: params8a.yaml  stats.txt
ro-crate-examples/prisms-pf/: config.yaml  generate_rocrate.py  parameters.prm
ro-crate-examples/prisms-pf/results/: integratedFields.txt  solution-012000.vtu  solution-020000.vtu  solution-060000.vtu  solution-064000.vtu  solution-096000.vtu  solution-100000.vtu  solution-108000.vtu  solution-120000.vtu  solution-124000.vtu  solution-128000.vtu  solution-136000.vtu  solution-140000.vtu  solution-164000.vtu  solution-168000.vtu  solution-172000.vtu
ro-crate-examples/prisms-pf/results/vtu/: solution-000000.vtu  solution-004000.vtu  solution-008000.vtu  solution-016000.vtu  solution-024000.vtu  solution-028000.vtu  solution-032000.vtu  solution-036000.vtu  solution-040000.vtu  solution-044000.vtu  solution-048000.vtu  solution-052000.vtu  solution-056000.vtu  solution-068000.vtu  solution-072000.vtu  solution-076000.vtu  solution-080000.vtu  solution-084000.vtu  solution-088000.vtu  solution-092000.vtu  solution-104000.vtu  solution-112000.vtu  solution-116000.vtu  solution-132000.vtu  solution-144000.vtu  solution-148000.vtu  solution-152000.vtu  solution-156000.vtu  solution-160000.vtu
ro-crate-examples/rocrate_cli/: __init__.py  cli.py  test_cli.py
ro-crate-examples/simple/: config.yaml  free_energy_1a.csv
working-examples/: ai-use-case.md  data-management.md  performance_comparison.md  pf_workflow.md  pfhub.md  pfhub.yaml  pfhub_moose_2a_xueyang94.json
(+5 files in other folders)
