[tool.poetry]
name = "rocrate_cli"
version = "0.1.0"
description = "Environment for running ro-crate CLI"
authors = ["Daniel Wheeler <daniel.wheeler2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rocrate = "^0.11.0"
frictionless = "^5.18.0"
toolz = "^1.0.0"
click = "^8.1.7"
click-params = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
rocrate-cli = "rocrate_cli.cli:rocrate_cli"